<resources>
    <!--General-->
    <string name="app_name">IBDB</string>
    <string name="dialog_ok_text">OK</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="sign_up_text">Sign up</string>
    <string name="cancel_text">Cancel</string>
    <string name="close_text">Close</string>
    <string name="send_text">Send</string>
    <string name="birth_date_format">YYYY-MM-DD</string>

    <!--Authentication-->
    <string name="email_hint_text">Email address</string>
    <string name="password_hint_text">Password</string>
    <string name="confirm_password_hint_text">Confirm password</string>
    <string name="loading_text">Loading ...</string>
    <string name="account_signed_out_title">Join our community!</string>
    <string name="account_signed_in_title">Your are already part of our team community!</string>
    <string name="email_address_not_valid">Email address is not valid</string>
    <string name="password_not_equals">Passwords are not equal</string>
    <string name="password_not_valid">Password is too weak</string>
    <string name="login_successful">Login successful</string>
    <string name="login_unsuccessful">Login unsuccessful</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_unsuccessful">Registration unsuccessful</string>
    <string name="logout_successful">Logout successful</string>
    <string name="logout_unsuccessful">Logout unsuccessful</string>

    <!--View spceific-->
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_recommendations">Recommendations</string>
    <string name="title_bestseller">Bestseller</string>
    <string name="title_popular">Popular</string>
    <string name="title_trending">Trending</string>
    <string name="title_upload">Upload</string>
    <string name="title_activities">Activities</string>
    <string name="title_users">Users</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="views_book_number_text">%1$d views</string>
    <string name="search_hint">Enter book name</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_published">Published</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_reviews">Reviews</string>
    <string name="book_category">Category</string>
    <string name="book_image">Select an image file</string>
    <string name="book_summary">Summary</string>
    <string name="book_page_number">Page number</string>
    <string name="book_sold">Sold</string>
    <string name="book_views">Views</string>
    <string name="preference_personal_details_header">Personal details</string>
    <string name="preference_email_address">Email address</string>
    <string name="preference_nickname">Nickname</string>
    <string name="preference_birth_year">Year of birth</string>
    <string name="preference_favourite_categories">Favourite categories</string>
    <string name="category_selection_text">Select your favourite categories</string>
    <string name="first_starting_information_title">Welcome</string>
    <string name="first_starting_information_text">We are happy to choose our IBDB application. If you want to enjoy all
        available feature of our service please create an account or login with your existing one(s). Your current
        account settings are available at the top right account icon.
    </string>
    <string name="no_data_text">Data is unavailable</string>
    <string name="book_upload_successful">Successful upload</string>
    <string name="book_upload_unsuccessful">Unsuccessful upload! Please, try it again!</string>
    <string name="category_error">Category selection is not available!</string>
    <string name="no_authentication_feature_text">Feature is unavailable until you\'re only guest!</string>
    <string name="successful_favourite_adding">Book is now your favourite one!</string>
    <string name="successful_favourite_removing">Book is now your not liked one!</string>
    <string name="unsuccessful_favourite_text">Your request is not completed! PLease, try it again!</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="no_comment_text">There is no comment for this review.</string>
    <string name="review_dialog_title">Add your review</string>
    <string name="comment_hint">Your review</string>
    <string name="successful_review">Your review successfully uploaded!</string>
    <string name="unsuccessful_review">There was an error during your upload! PLease try it again!</string>
    <string name="successful_review_removal">Selected review successfully deleted!</string>
    <string name="unsuccessful_review_removal">There was an error during removal ! Please try it again!</string>
    <string name="successful_user_modification">Successful user status modification!</string>
    <string name="unsuccessful_user_modification">There was an error during your modification! Please, try it again!
    </string>
    <string name="error_text_network">There was an error during your request, please try it again!</string>
    <string name="error_text_possible_authorization_problems">There was an error during your request,check your
        authentication and please try it again!
    </string>
</resources>
