<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_personal_details_header">

        <EditTextPreference
                android:key="pref_nickname"
                android:inputType="textPersonName"
                android:title="@string/preference_nickname"/>

        <EditTextPreference
                android:inputType="datetime"
                android:key="pref_birth_year"
                android:hint="@string/birth_date_format"
                android:title="@string/preference_birth_year"/>

        <Preference
                android:persistent="true"
                android:shouldDisableView="true"
                android:key="pref_category"
                android:title="@string/preference_favourite_categories"/>

    </PreferenceCategory>


</PreferenceScreen>