<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_main"
            android:icon="@drawable/ic_main"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/title_favourites"/>

    <item
            android:id="@+id/navigation_upload"
            android:icon="@drawable/ic_upload"
            android:title="@string/title_upload"/>

    <item
            android:id="@+id/navigation_activities"
            android:icon="@drawable/ic_activities"
            android:title="@string/title_activities"/>

    <item
            android:id="@+id/navigation_users"
            android:icon="@drawable/ic_users"
            android:title="@string/title_users"/>

</menu>
