<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="16dp">

    <ViewFlipper android:layout_width="match_parent" android:layout_height="wrap_content">


        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:padding="16dp">

            <EditText
                    android:id="@+id/et_login_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint_text"/>

            <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/et_login_user_name"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password_hint_text"/>

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:padding="16dp">

            <ProgressBar
                    android:id="@+id/pb_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginStart="16dp"
                    android:indeterminateTint="@android:color/black"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintLeft_toRightOf="@id/pb_login"
                      android:text="@string/loading_text"
                      android:textSize="16sp"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:layout_marginStart="16dp"/>

        </android.support.constraint.ConstraintLayout>


    </ViewFlipper>


</android.support.constraint.ConstraintLayout>