<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:paddingStart="16dp"
                                             android:paddingEnd="16dp"
>


    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp">

        <ImageView
                android:id="@+id/iv_upload_book_title"
                android:layout_width="40dp" android:layout_height="40dp"
                android:src="@drawable/ic_book_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
        />

        <EditText
                android:id="@+id/et_upload_book_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/book_title"
                style="@style/BookItemPageTextViewStyle"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_constraintTop_toBottomOf="@id/cl_book_title">

        <ImageView
                android:id="@+id/iv_upload_book_author"
                android:src="@drawable/ic_book_author"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/BookItemPageImageViewStyle"
        />

        <EditText
                android:id="@+id/et_upload_book_author"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/book_author"
                style="@style/BookItemPageTextViewStyle"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_book_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_constraintTop_toBottomOf="@id/cl_book_author">

        <ImageView
                android:id="@+id/iv_upload_book_publisher"
                android:src="@drawable/ic_book_publisher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/BookItemPageImageViewStyle"
        />

        <EditText
                android:id="@+id/et_upload_book_publisher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/book_publisher"
                style="@style/BookItemPageTextViewStyle"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_book_published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_constraintTop_toBottomOf="@id/cl_book_publisher">

        <ImageView
                android:id="@+id/iv_upload_book_published"
                android:src="@drawable/ic_book_published"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/BookItemPageImageViewStyle"
        />

        <TextView
                android:id="@+id/et_upload_book_published"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/book_publisher"
                style="@style/BookItemPageTextViewStyle"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_book_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_constraintTop_toBottomOf="@id/cl_book_published">

        <ImageView
                android:id="@+id/iv_upload_book_category"
                android:src="@drawable/ic_book_categories"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/BookItemPageImageViewStyle"
        />

        <TextView
                android:id="@+id/et_upload_book_category"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/book_category"
                style="@style/BookItemPageTextViewStyle"/>


    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_book_page_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_constraintTop_toBottomOf="@id/cl_book_category">

        <ImageView
                android:id="@+id/iv_upload_book_page_number"
                android:src="@drawable/ic_book_page_number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/BookItemPageImageViewStyle"
        />

        <TextView
                android:id="@+id/et_upload_book_page_number"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:hint="@string/book_page_number"
                style="@style/BookItemPageTextViewStyle"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_book_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_constraintTop_toBottomOf="@id/cl_book_page_number">

        <ImageView
                android:id="@+id/iv_upload_book_summary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_book_summary"
                style="@style/BookItemPageImageViewStyle"
        />

        <TextView
                android:id="@+id/et_upload_book_summary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/book_summary"
                style="@style/BookItemPageTextViewStyle"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_book_image_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_constraintTop_toBottomOf="@id/cl_book_summary">

        <ImageView
                android:id="@+id/iv_upload_book_image_url"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_book_image_url"
                style="@style/BookItemPageImageViewStyle"
        />

        <TextView
                android:id="@+id/et_upload_book_image_url"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/book_image"
                style="@style/BookItemPageTextViewStyle"/>


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
