<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?android:attr/colorPrimary"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_book_title"/>

            <TextView
                    android:id="@+id/tv_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="140dp"
                    android:text="@string/account_signed_out_title"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:layout_marginTop="180dp">

                <Button
                        android:id="@+id/btn_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/black"
                        android:text="@string/sign_up_text"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/btn_login"/>

                <Button
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/black"
                        android:text="@string/login_text"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintLeft_toRightOf="@id/btn_sign_in"
                        app:layout_constraintRight_toRightOf="parent"/>

            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="180dp"
                    android:visibility="gone"
                    tools:visibility="gone">

                <Button
                        android:id="@+id/btn_sign_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/black"
                        android:text="@string/logout_text"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>
            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
                android:id="@+id/settings_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>