<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="16dp">

    <ViewFlipper
            android:id="@+id/vf_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureAllChildren="false">


        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:padding="16dp">

            <EditText
                    android:id="@+id/et_registration_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint_text"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"/>

            <EditText
                    android:id="@+id/et_registration_password"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/et_registration_user_name"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password_hint_text"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"/>

            <EditText
                    android:id="@+id/et_registration_confirm_password"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/et_registration_password"
                    android:layout_marginTop="16dp"
                    android:hint="@string/confirm_password_hint_text"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:padding="16dp">

            <ProgressBar
                    android:id="@+id/pb_registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginStart="16dp"
                    android:indeterminateTint="@android:color/black"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toEndOf="@id/pb_registration"
                      android:text="@string/loading_text"
                      android:textColor="@android:color/black"
                      android:textSize="16sp"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:layout_marginStart="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:padding="16dp">

            <ImageView
                    android:id="@+id/iv_registration_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/tv_registration_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/iv_registration_result"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tv_registration_error_reason"
                    android:layout_marginStart="16dp"
                    android:textColor="@android:color/black"/>

            <TextView
                    android:id="@+id/tv_registration_error_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@id/tv_registration_result"
                    app:layout_constraintStart_toStartOf="@id/tv_registration_result"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewFlipper>


</androidx.constraintlayout.widget.ConstraintLayout>